--- a/BikeWale.UI/m/css/dealer/listing.css
+++ b/BikeWale.UI/m/css/dealer/listing.css
@@ -162,3 +162,30 @@
         width: 275px;
     }
 }
+
+/* used bikes */
+.used-swiper .swiper-card {
+    min-height: 190px
+}
+
+.used-swiper .swiper-image-preview {
+    width: 100%;
+    height: 110px;
+    padding: 5px 5px 0;
+    display: table;
+    text-align: center;
+}
+
+.used-swiper .image-thumbnail {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.used-swiper .swiper-image-preview img {
+    height: 101px;
+}
+
+.used-swiper .swiper-details-block {
+    padding: 5px 10px 10px;
+}
